Vertical Overflow removed to solve scrolling.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 *{
     margin: 0;
-    padding: 0;
-    overflow: hidden;
+    adding: 0;
+    overflow-x: hidden;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 }
